--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chess",
   "version": "1.0.0",
   "main": "app.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "nodemon app.js"
   },
